--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -7,15 +7,15 @@
   <%= f.hidden_field :reset_password_token %>
 
   <div class="form-group">
-    <%= f.label 'Пароль', "Новый пароль" %><br />
+    <%= f.label :password, "Новый пароль" %><br />
     <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+      <em>(<%= @minimum_password_length %> символов минимум)</em><br />
     <% end %>
     <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label 'Подтверждение пароля', "Повторите новый пароль" %><br />
+    <%= f.label :password_confirmation, "Повторите новый пароль" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
