--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,21 +15,21 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label 'Пароль' %> <i>(оставьте пустым, если не хотите менять)</i><br />
+    <%= f.label :password %> <i>(оставьте пустым, если не хотите менять)</i><br />
     <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
     <% if @minimum_password_length %>
       <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <em><%= @minimum_password_length %> символов минимум</em>
     <% end %>
   </div>
 
   <div class="form-group">
-    <%= f.label 'Подтверждение пароля' %><br />
+    <%= f.label :password_confirmation%><br />
     <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <%= f.label 'Текущий пароль' %> <i>(нужен текущий пароль для подтвержения изменений)</i><br />
+    <%= f.label :current_password %> <i>(нужен текущий пароль для подтвержения изменений)</i><br />
     <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
   </div>
 
