--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,7 +8,7 @@
         <div class="col-md-6">
           <div class="event-description">
             <h1><%= @event.title %></h1>
-            <h3><%= @event.datetime %></h3>
+            <h3><%= l @event.datetime %></h3>
             <h3><small><%= link_to @event.address,
                                    "https://yandex.ru/maps/?text=#{@event.address}" %></small></h3>
             <p><%= @event.description %></p>
@@ -16,8 +16,10 @@
 
           <% if current_user_can_edit?(@event) %>
             <div class="buffer-top">
-              <%= link_to 'Изменить', edit_event_path(@event),
+              <%= link_to t('view.btn.change'), edit_event_path(@event),
                         class: 'btn btn-primary' %>
+              <%= link_to t('view.btn.delete'), event_path(@event),
+                          method: :delete, data: { confirm: t('view.message.sure') }, class: 'btn btn-danger' %>
             </div>
           <% end %>
         </div>
