correct photo erb

--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,7 +1,7 @@
 <%# Паршал для вывода отдельной фотографии %>
 <div class="event-photo buffer-both">
   <% unless photo.photo.thumb.blank? %>
-    <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url unless photo.photo.thumb.blank? %>
+    <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url %>
 
   <%# Показываем не только фотку, но и юзeра, который её добавил %>
     Добавил <%= render partial: 'users/user', object: photo.user %>
