--- a/app/views/event_mailer/photo.html.erb
+++ b/app/views/event_mailer/photo.html.erb
@@ -1,6 +1,6 @@
 <h1><%= t '.title' %></h1>
-<%= image_tag @photo.photo.url  %>
-<p><%= t '.author' %>: <strong><%= @user.name %></strong></p>
+<%= link_to image_tag(@photo.photo.thumb.url), @photo.photo.url %>
+<p><%= t '.author' %>: <strong><%= @photo.user.name %></strong></p>
 
 <hr/>
 
