--- a/app/views/event_mailer/photo.text.erb
+++ b/app/views/event_mailer/photo.text.erb
@@ -1,8 +1,8 @@
 <%= t '.title' %>
 ----
-<%= @photo.photo.url %>
+<%= link_to image_tag(@photo.photo.thumb.url), @photo.photo.url %>
 
-<%= t '.author' %>: <%= @user.name %>
+<%= t '.author' %>: <%= @photo.user.name %>
 
 --------------------------------
 <%= t '.event' %>: <%= @event.title %>
