--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,9 +1,13 @@
 <%# Паршал для вывода отдельной фотографии %>
-<div class="event-photo buffer-both">
+<%#<div class="event-photo buffer-both"> %>
   <% unless photo.photo.thumb.blank? %>
-    <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url %>
+      <% image_title = "Добавил #{render partial: 'users/user', object: photo.user}" %>
+      <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url, data: {
+          toggle: 'lightbox', title: image_title, galery: 'event-photos'
+      } %>
 
   <%# Показываем не только фотку, но и юзeра, который её добавил %>
-    Добавил <%= render partial: 'users/user', object: photo.user %>
+  <%#  Добавил <%= render partial: 'users/user', object: photo.user %>
   <% end %>
-</div>
+
+<%#</div>%>
