--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -12,6 +12,8 @@
             <h3><small><%= link_to @event.address,
                                    "https://yandex.ru/maps/?text=#{@event.address}" %></small></h3>
             <p><%= @event.description %></p>
+            <button type="button"
+                    class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Карта</button>
           </div>
 
           <% if current_user_can_edit?(@event) %>
@@ -20,6 +22,7 @@
                         class: 'btn btn-primary' %>
               <%= link_to t('view.btn.delete'), event_path(@event),
                           method: :delete, data: { confirm: t('view.message.sure') }, class: 'btn btn-danger' %>
+
             </div>
           <% end %>
         </div>
@@ -75,5 +78,29 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
+
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Карта <%= "#{@event.address}" %></h4>
+      </div>
+      <div class="modal-body">
+        <div id="map"
+             data-address="<%= @event.address %>"
+             style="width: 100%; height: 400px;">
+        </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+      </div>
+    </div>
+
   </div>
 </div>
