--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <title><%= content_for?(:title) ? yield(:title) : "Bbq" %></title>
   <link rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+  <script src="maps.js" type="text/javascript"></script>
 
   <%= csrf_meta_tags %>
 
