--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,16 +1,8 @@
 <%# Паршал для вывода отдельной фотографии %>
 <div class="event-photo buffer-both">
-  <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url %>
-
-  <%# Показываем не только фотку, но и юзера, который её добавил %>
-  Добавил <%= render partial: 'users/user', object: photo.user %>
-  <% if current_user_can_edit?(photo) %>
-      <%= link_to(
-              fa_icon('times'),
-              event_photo_path(photo.event, photo),
-              method: :delete,
-              data: {confirm: t('.destroy_confirm')}
-          ) %>
-  <% end %>
+  <% image_title = "Добавил #{render partial: 'users/user', object: photo.user}" %>
+  <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url, data: {
+      toggle: 'lightbox', title: image_title, gallery: 'event-photos'
+  } %>
 
 </div>
