--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -39,7 +39,7 @@
         </div>
 
         <%# Рисуем форму для добавления новой фотографии %>
-        <div class="event-photo-form">
+        <div class="event-photo-form buffer-top">
           <%= render partial: 'photos/form', locals: {photo: @new_photo || @event.photos.build} %>
         </div>
       </div>
