--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -13,11 +13,11 @@
                                    "https://yandex.ru/maps/?text=#{@event.address}" %></small></h3>
             <p><%= @event.description %></p>
             <button type="button"
-                    class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Карта</button>
+                    class="btn btn-info btn-lg buffer-both" data-toggle="modal" data-target="#myModal">Карта</button>
           </div>
 
           <% if current_user_can_edit?(@event) %>
-            <div class="buffer-top">
+            <div class="buffer-both">
               <%= link_to t('view.btn.change'), edit_event_path(@event),
                         class: 'btn btn-primary' %>
               <%= link_to t('view.btn.delete'), event_path(@event),
